<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileAct"
    android:orientation="vertical"
    android:background="@drawable/information">

    <LinearLayout
        android:id="@+id/top_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        tools:ignore="UselessParent"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/fill_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/fill2"
            android:fontFamily="@font/poppins_extrabold"
            android:textColor="@color/black"
            android:textSize="25sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/fill_child"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/fill_child2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck"
        app:layout_constraintTop_toBottomOf="@id/top_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_2"
        android:scaleType="centerCrop"
        app:civ_border_overlay="true"
        app:civ_border_width="8dp"
        app:civ_border_color="@color/gray3"
        app:layout_constraintTop_toBottomOf="@id/fill_child"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/profile"/>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_design"
        android:text="@string/up"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_design"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:textAllCaps="false"
        tools:ignore="VisualLintButtonSize"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>