<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/title_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_service"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:contentDescription="@string/title_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/price_service"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <TextView
        android:id="@+id/price_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:text="@string/price_service"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:contentDescription="@string/price_service"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/description_service"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/description_service"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/description_service"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/radioButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_service" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/service"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_service"/>

</androidx.constraintlayout.widget.ConstraintLayout>
