<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PaymentAct"
    android:background="@drawable/payment">

    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:src="@drawable/check_icon"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/green"/>

    <TextView
        android:id="@+id/confirm_messages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_extrabold"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/success_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/pay_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:text="@string/pay"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_extrabold"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/confirm_messages"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/pay_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_extrabold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/date"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/service"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_medium"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/payment_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/pay_summary"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_extrabold"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/price_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/service"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/price"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/price_service"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_design"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_bold"
            tools:ignore="VisualLintButtonSize" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>