<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:paddingBottom="6dp" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/type_array"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/face_shape"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        android:paddingBottom="6dp" />

    <Spinner
        android:id="@+id/faceShapeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/face_shape_array"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:layout_marginTop="16dp" />
</LinearLayout>