<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/booking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BookFrg">

    <LinearLayout
        android:id="@+id/header_insight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="|"
            android:fontFamily="@font/poppins_medium"
            android:textSize="24sp"
            android:textColor="@color/gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_book"
            android:fontFamily="@font/poppins_extrabold"
            android:textSize="24sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/header_insight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_book"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_active"
            android:text="@string/book"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/white"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_bg_nonactive"
            android:text="@string/active"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/gray"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:background="@drawable/button_bg_nonactive"
            android:text="@string/history"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/gray"
            android:textAllCaps="false" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/menu_book"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/droplist_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:hintEnabled="true"
                android:hint="@string/location"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:text="@string/drop_list"
                    android:importantForAccessibility="yes"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/select_services"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/select_services"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <ProgressBar
                    android:id="@+id/progressBar_services"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/recyclerServices"
                    app:layout_constraintEnd_toEndOf="@id/recyclerServices"
                    app:layout_constraintStart_toStartOf="@id/recyclerServices"
                    app:layout_constraintTop_toTopOf="@id/recyclerServices" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerServices"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    android:background="@drawable/shape_text"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/select_barber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/select_barber"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/empty_barber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/selected_barber"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    android:visibility="visible"
                    app:layout_constraintTop_toTopOf="@id/recyclerBarbers"
                    app:layout_constraintBottom_toBottomOf="@id/recyclerBarbers"
                    app:layout_constraintStart_toStartOf="@+id/recyclerBarbers"
                    app:layout_constraintEnd_toEndOf="@+id/recyclerBarbers"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerBarbers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="horizontal"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:text="@string/date_time"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold" />

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_text"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detail_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:hintEnabled="true"
                android:hint="@string/detail_time"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detail_time"
                    android:text="@string/select_time"
                    android:importantForAccessibility="yes"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/book_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginBottom="70dp"
                android:background="@drawable/button_bg"
                android:text="@string/book_now"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textAlignment="center"
                android:fontFamily="@font/poppins_bold"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>